--- a/08-HTML/homework/style-cv.css
+++ b/08-HTML/homework/style-cv.css
@@ -12,6 +12,11 @@ span {
     text-shadow: #aaa;
     font-size: large;
 }
+h1{
+    margin-left: 100px;
+    margin-top: 20px;
+}
+
 .Año {
     float: right;
     color:gray;
@@ -62,6 +67,10 @@ span {
     width: 30%;
     background-color: #f1f1f1;
     padding-left: 20px;
+    
+}
+.rightcolumn p {
+    text-align: justify;
 }
 .row:after {
     content: "";
@@ -69,11 +78,7 @@ span {
     clear: both;
 }
 
-.foto {
-   
-   
 
-}
 .foto img {
     width: 100%;
 }
